--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
