--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-toggle": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.5"
+    "@radix-ui/react-tooltip": "^1.0.5",
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1"
   },
