--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-router-dom": "^6.8.1",
     "react-hook-form": "^7.43.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dropzone": "^14.2.3",
+    "react-barcode-reader": "^0.0.2",
+    "papaparse": "^5.4.1",
     "@hookform/resolvers": "^2.9.11",
     "zod": "^3.20.6",
     "zustand": "^4.3.6",
@@ -56,6 +59,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
