--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dropzone": "^14.2.3",
     "react-barcode-reader": "^0.0.2",
     "papaparse": "^5.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "@hookform/resolvers": "^2.9.11",
     "zod": "^3.20.6",
     "zustand": "^4.3.6",
