--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
+    "html2canvas": "^1.4.1",
     "@hookform/resolvers": "^2.9.11",
     "zod": "^3.20.6",
     "zustand": "^4.3.6",
