--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dropzone": "^14.2.3",
     "react-barcode-reader": "^0.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "papaparse": "^5.4.1",
     "@hookform/resolvers": "^2.9.11",
     "zod": "^3.20.6",
