--- a/apps/commission-engine/package.json
+++ b/apps/commission-engine/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "shadcn-ui": "^0.4.1"
+    "shadcn-ui": "^0.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1"
   },
   "devDependencies": {
     "vite": "^4.4.0",
