--- a/apps/commission-engine/package.json
+++ b/apps/commission-engine/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "shadcn-ui": "^0.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1"
@@ -17,6 +18,8 @@
   "devDependencies": {
     "vite": "^4.4.0",
     "tailwindcss": "^3.3.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
   }
