--- a/apps/commission-engine/package.json
+++ b/apps/commission-engine/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "renterinsight-module",
-  "version": "0.1.0",
+  "name": "commission-engine",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.12",
-    "shadcn-ui": "^0.4.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.4.0",
-    "tailwindcss": "^3.3.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
