--- a/apps/commission-engine/package.json
+++ b/apps/commission-engine/package.json
@@ -12,7 +12,11 @@
     "react-dom": "^18.2.0",
     "shadcn-ui": "^0.4.1",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1"
+    "jspdf-autotable": "^3.8.1",
+    "sonner": "^1.4.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2"
   },
   "devDependencies": {
     "vite": "^4.4.0",
