--- a/package.json
+++ b/package.json
@@ -9,28 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-hook-form": "^7.43.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dropzone": "^14.2.3",
-    "react-barcode-reader": "^0.0.2",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1",
-    "papaparse": "^5.4.1",
     "@hookform/resolvers": "^2.9.11",
-    "zod": "^3.20.6",
-    "zustand": "^4.3.6",
-    "axios": "^1.3.4",
-    "date-fns": "^2.29.3",
-    "lucide-react": "^0.321.0",
-    "recharts": "^2.5.0",
-    "react-table": "^7.8.0",
-    "@tanstack/react-table": "^8.7.9",
-    "clsx": "^1.2.1",
-    "tailwind-merge": "^1.10.0",
-    "class-variance-authority": "^0.7.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.2",
@@ -54,13 +33,35 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-toggle": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
-    "html2canvas": "^1.4.1"
+    "@tanstack/react-table": "^8.7.9",
+    "axios": "^1.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
+    "lucide-react": "^0.321.0",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
+    "react-barcode-reader": "^0.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.1",
+    "react-router-dom": "^6.8.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-table": "^7.8.0",
+    "recharts": "^2.5.0",
+    "tailwind-merge": "^1.10.0",
+    "zod": "^3.20.6",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
