--- a/apps/company-settings/package.json
+++ b/apps/company-settings/package.json
@@ -13,7 +13,8 @@
     "shadcn-ui": "^0.4.1"
   },
   "devDependencies": {
-    "vite": "^4.4.0",
+    "vite": "^5.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
