Run knip in smaller chunks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "knip:deps": "knip --production --dependencies --fix --silent",
+    "knip:files": "knip --production --files --fix --allow-remove-files --silent"
   },
   "dependencies": {
     "jspdf-autotable": "^3.8.1"
