--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
     "knip:files": "knip --production --files --fix --allow-remove-files --silent"
   },
   "dependencies": {
-    "jspdf-autotable": "^3.8.1"
+    "jspdf-autotable": "^3.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "lucide-react": "^0.263.1",
+    "clsx": "^1.2.1",
+    "@radix-ui/react-toast": "^1.1.3",
+    "tailwind-merge": "^1.12.0",
+    "class-variance-authority": "^0.6.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "papaparse": "^5.4.1",
+    "jspdf": "^2.5.1",
+    "@supabase/supabase-js": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
