--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.8.1",
     "lucide-react": "^0.263.1",
     "clsx": "^1.2.1",
+    "@supabase/supabase-js": "^2.21.0",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
@@ -25,13 +26,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "tailwind-merge": "^1.12.0",
     "class-variance-authority": "^0.6.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "papaparse": "^5.4.1",
-    "jspdf": "^2.5.1",
-    "@supabase/supabase-js": "^2.21.0",
-    "react-dropzone": "^14.2.3",
-    "recharts": "^2.8.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "@radix-ui/react-slot": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
