--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@radix-ui/react-progress": "^1.0.3",
     "tailwind-merge": "^1.12.0",
     "class-variance-authority": "^0.6.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-slot": "^1.0.2",
+    "papaparse": "^5.4.1",
+    "react-dropzone": "^14.2.3",
+    "recharts": "^2.8.0",
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
