--- a/package.json
+++ b/package.json
@@ -6,53 +6,48 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "knip:deps": "knip --production --dependencies --fix --silent",
     "knip:files": "knip --production --files --fix --allow-remove-files --silent"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.3",
-    "@types/papaparse": "^5.3.14",
-    "class-variance-authority": "^0.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "lucide-react": "^0.263.1",
     "clsx": "^1.2.1",
+    "@headlessui/react": "^1.7.17",
+    "papaparse": "^5.4.1",
+    "react-dropzone": "^14.2.3",
+    "recharts": "^2.8.0",
+    "react-beautiful-dnd": "^13.1.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
-    "lucide-react": "^0.263.1",
-    "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.8.1",
-    "recharts": "^2.8.0",
-    "tailwind-merge": "^1.12.0"
+    "@radix-ui/react-toast": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "tailwind-merge": "^1.12.0",
+    "class-variance-authority": "^0.6.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/papaparse": "^5.3.14"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.0",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
-    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "babel-jest": "^30.0.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "jest": "^30.0.4",
     "knip": "^3.13.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
